@@ -96,6 +96,17 @@ function addressbook_init($showerr = true, $onlylocal = false) {
         }
     }
 
+
+    /*
+     * hook allows to include different address book backends.
+     * plugins should extract $abook and $r from arguments
+     * and use same add_backend commands as above functions.
+     * @since 1.5.1 and 1.4.5
+     */
+    $hookReturn = do_hook('abook_init', $abook, $r);
+    $abook = $hookReturn[1];
+    $r = $hookReturn[2];
+
     /* Load global addressbook from SQL if configured */
     if (isset($addrbook_global_dsn) && !empty($addrbook_global_dsn)) {
         /* Database configured */
@@ -587,4 +598,12 @@ if((isset($addrbook_dsn) && !empty($addrbook_dsn)) ||
   include_once(SM_PATH . 'functions/abook_database.php');
 }
 
+/*
+ * hook allows adding different address book classes.
+ * class must follow address book class coding standards.
+ *
+ * see addressbook_backend class and functions/abook_*.php files.
+ * @since 1.5.1 and 1.4.5
+ */
+do_hook('abook_add_class');
 ?>
