@@ -77,7 +77,8 @@ Version 1.4.5 - CVS
     generated trying to find reply citation (#1179754).
   - Add Cancel button to addressbook (#1180565).
   - RFC 2046: Send mixed messages with multipart/alternative nested boundaries 
-    with correct boundary strings
+    with correct boundary strings.
+  - Ported abook_init and abook_add_class hooks from devel.
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
